sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: '(' expected but identifier found.
			if plusPetit(j+1,j){
                           ^AlgBubbleSort2:10: error: illegal start of simple expression
		}
                ^